# CTFs

AtHackCTF_2025/hardware1/: Anis.nfc  Majeed.nfc  Ned.nfc
AtHackCTF_2025/reverse1/: test.txt
AtHackCTF_2025/web-cardjacker/: Dockerfile
CS-Games_2024/iot/: nmap.txt  notes.txt  test.txt
CyberSci_Regionals_2024/vecveil/: disass.txt
Flare-On_2024/2-checksum/: notes.md
Flare-On_2024/3-aray/: notes.md
Flare-On_2024/4 - mememaker3000/: notes.md
Flare-On_2024/5 - sshd/: notes.md
Flare-On_2025/1_-_DrillBabyDrill/: DrillBabyDrill.py  README.txt  solution.py
Flare-On_2025/2_-_project_chimera/: dis-test.py  extract.py  extracted_injection.py  marshal-test.py  solution.txt  stage2-llm.py  stage2-test.py  stage3-complete.py  stage3-dis.py  stage3-execute.py  stage3-test.py  stage3-to-marshal.py  stage3.marshal.xxd  stage3.zlib  stage4-get-expected-user.py  stage4-test.py  stage4.marshal  stage4.py  stage4.txt  test.py
Flare-On_2025/3_-_pretty_devilish_file/: encryption  image.xxd  notes.txt  solution.py  test-llm.py  test.py  test.zlib
Flare-On_2025/4_-_UnholyDragon/: notes.txt  solution.txt
Flare-On_2025/5_-_ntfsm/: notes.txt  test.py
Flare-On_2025/6_-_Chain_of_Demands/: notes.txt
Hackfest_2024/HF-Advance/: binary.txt  dax-hf2024-gba.cheats  dax-hf2024-gba.elf.i64
Hackfest_2024/badapp/: badApp.i64
NorthSec2025/hornswoggle/foglink-1.0.0/: PKG-INFO  README.md  pyproject.toml
NorthSec2025/hornswoggle/foglink-1.0.0/src/foglink.egg-info/: SOURCES.txt  entry_points.txt
NorthSec2025/hornswoggle/foglink-1.0.0/src/foglink/proto/: backend.py  interface.py
(+1190 files in other folders)
